third_party/rust/chromium_crates_io/vendor/thiserror-v2/tests/ui/no-display.rs
use thiserror::Error;

#[derive(Debug)]
struct NoDisplay;

#[derive(Error, Debug)]
#[error("thread: {thread}")]
pub struct Error {
    thread: NoDisplay,
}

#[derive(Error, Debug)]
#[error("thread: {thread:o}")]
pub struct ErrorOctal {
    thread: NoDisplay,
}

fn main() {}
